# minimal-contract-chain

./: Cargo.toml
node/: Cargo.toml
node/src/: chain_spec.rs
pallets/template/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
